--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+<body>
+
+<embed src="https://jamesbaguley.github.io/James_Baguley_Resume2024.pdf" width="500" height="375">
+
+</body>
+</html>
