--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<embed src="https://jamesbaguley.github.io/James_Baguley_Resume2024.pdf" width="500" height="375">
+<a href="JamesBaguley.github.io/James_Baguley_Resume2024.pdf" target="_blank">PDF.</a>
 
 </body>
 </html>
