--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<a href="https://JamesBaguley.github.io/documents/James_Baguley_Resume2024.pdf" target="_blank">Resume</a>
+<a href="https://documents/James_Baguley_Resume2024.pdf" target="_blank">Resume</a>
 
 </body>
 </html>
